kubernetes/netbird/kustomize/overlays/zitadel_relay/relay.yml
# relay
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relay
  template:
    metadata:
      labels:
        app: relay
    spec:
      hostNetwork: true
      containers:
        - name: relay
          image: netbirdio/relay:latest
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '0.5'
              memory: 512Mi
