kubernetes/netbird/kustomize/overlays/zitadel_relay/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relay-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: relay.public.127.0.0.1.sslip.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: relay
              port:
                number: 30080
  tls: []
